Cleanup, restructured Yaml or DLLs
* The two forms of DLL detection, by code and from filenames, got
  split into separate structures.

* The is now relative_path for filename based approach to specify
  a path relative to module location for search and default dest
  path.

* The dest path is now derived from the folder where the module
  lives, but can be overridden.

* Changed "patterns" for filename to "prefixes", as they are that
  more than everything, as a DLL pattern is still required to match.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -251,33 +251,28 @@
 - module-name: "shapely.geos"
   dlls:
     - dest_path: "shapely"
-      dll_filename_code: "shapely.geos._lgeos._name"
-      include_from_code: ""
-      setup_code: "import shapely.geos"
+      by_code:
+        setup_code: "import shapely.geos"
+        dll_filename_code: "shapely.geos._lgeos._name"
 
 - module-name: "vosk"
   dlls:
-    - dest_path: "vosk"
-      dir: "."
-      include_from_filenames: ""
-      patterns:
-        - "libvosk"
+    - from_filenames:
+        prefixes:
+          - "libvosk"
 
 - module-name: "tensorflow.lite.experimental.microfrontend.python.ops.audio_microfrontend_op"
   dlls:
-    - dest_path: "tensorflow/lite/experimental/microfrontend/python/ops"
-      dir: "."
-      include_from_filenames: ""
-      patterns:
-        - "_audio_microfrontend_op"
+    - from_filenames:
+        prefixes:
+          - "_audio_microfrontend_op"
 
 - module-name: "sklearn._distributor_init"
   dlls:
-    - dest_path: "sklearn/.libs"
-      dir: ".libs"
-      include_from_filenames: ""
-      patterns:
-        - ""
+    - from_filenames:
+        relative_path: ".libs"
+        prefixes:
+          - ""
   anti-bloat:
     - description: "remove site module and distutils usage"
       replacements:
@@ -291,11 +286,10 @@
 
 - module-name: "tensorflow"
   dlls:
-    - dest_path: "tensorflow/core/platform"
-      dir: "core/platform"
-      include_from_filenames: ""
-      patterns:
-        - "_cpu_feature_guard"
+    - from_filenames:
+        relative_path: "core/platform"
+        prefixes:
+          - "_cpu_feature_guard"
   anti-bloat:
     - description: "remove useless distutils usage"
       replacements:
@@ -306,21 +300,17 @@
 
 - module-name: "clr"
   dlls:
-    - dest_path: "."
-      dir: "."
-      include_from_filenames: ""
-      patterns:
-        - "Python.Runtime"
+    - from_filenames:
+        prefixes:
+          - "Python.Runtime"
 
 - module-name: "torchvision"
   dlls:
-    - dest_path: "torchvision"
-      dir: "."
-      include_from_filenames: ""
-      patterns:
-        - "zlib"
-        - "libjpeg"
-        - "libpng*"
+    - from_filenames:
+        prefixes:
+          - "zlib"
+          - "libjpeg"
+          - "libpng*"
 
 - module-name: "psutil"
   anti-bloat:
@@ -1190,11 +1180,10 @@
     patterns:
       - "bin/*.h"
   dlls:
-    - dest_path: "torch/lib"
-      dir: "lib"
-      include_from_filenames: ""
-      patterns:
-        - ""
+    - from_filenames:
+        relative_path: "lib"
+        prefixes:
+          - ""
 
 - module-name: "torch.fx._symbolic_trace"
   anti-bloat:
