--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1560,3 +1560,18 @@
         "from tenacity.tornadoweb import TornadoRetrying": "pass"
       control_tags:
         - "allow_tornado"
+
+- module-name: "Xlib.XK"
+  implicit-imports:
+    depends:
+      - "Xlib.keysymdef.*"
+
+- module-name: "Xlib.support.connect"
+  implicit-imports:
+    depends:
+      - "Xlib.support.unix_connect"
+
+- module-name: "Xlib.display"
+  implicit-imports:
+    depends:
+      - "Xlib.ext.*"
