--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -168,6 +168,7 @@
         "nofollow",
         "noinclude",
         "nosite",
+        "nowarn",
         "Nuitka",
         "numpy",
         "ob_sval",
@@ -198,6 +199,7 @@
         "PYSTATE",
         "pystone",
         "PYTHONHASHSEED",
+        "PYTHONHOME",
         "PYTHONIOENCODING",
         "PYTHONPATH",
         "redist",
