--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -202,6 +202,7 @@
         "PYTHONHOME",
         "PYTHONIOENCODING",
         "PYTHONPATH",
+        "Qualname",
         "redist",
         "reexecute",
         "repr",
