macOS: Require onefile bundle mode for PyQt5
* Also recommend disable of console for PyQt6.

* Added TODO to disable it for Anaconda which doesn't need it.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1327,6 +1327,16 @@
   implicit-imports:
     disable_console: "recommend"
 
+- module-name: "PyQt5"
+  implicit-imports:
+    # TODO: Use control tag "not anaconda", they solve this better.
+    standalone_macos_bundle_mode: "onefile"
+    disable_console: "recommend"
+
+- module-name: "PyQt6"
+  implicit-imports:
+    disable_console: "recommend"
+
 - module-name: "Tkinter"
   implicit-imports:
     standalone_macos_bundle_mode: "onefile"
