Minor spelling cleanups

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,6 +92,7 @@
         "asyncgen",
         "binaryfunc",
         "bytecode",
+        "bytecodes",
         "CBOOL",
         "ccache",
         "clangcl",
