Standalone: Added support for "xgboost" package.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1583,3 +1583,15 @@
   implicit-imports:
     depends:
       - "Xlib.ext.*"
+
+- module-name: "xgboost"
+  data-files:
+    patterns:
+      - "VERSION"
+
+- module-name: "xgboost.core"
+  dlls:
+    - from_filenames:
+        relative_path: "lib"
+        prefixes:
+          - "xgboost"
