Standalone: Added data files for "connexion" package

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1595,3 +1595,8 @@
         relative_path: "lib"
         prefixes:
           - "xgboost"
+
+- module-name: "connexion"
+  data-files:
+    dirs:
+      - "resources"
