Standalone: Added support for "swagger_ui_bundle" data files.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1600,3 +1600,8 @@
   data-files:
     dirs:
       - "resources"
+
+- module-name: "swagger_ui_bundle"
+  data-files:
+    dirs:
+      - "vendor"
