add datafile for text_unidecode

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1611,3 +1611,8 @@
         relative_path: "lib"
         prefixes:
           - "xgboost"
+
+- module-name: "text_unidecode"
+  data-files:
+    patterns:
+      - "data.bin"
