Standalone: Added datafile for "text_unidecode"

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1605,3 +1605,8 @@
   data-files:
     dirs:
       - "vendor"
+
+- module-name: "text_unidecode"
+  data-files:
+    patterns:
+      - "data.bin"
