Debian: Workaround for lib2to3 data files

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -98,6 +98,7 @@
     dest_path: "lib2to3"
     patterns:
       - "../*.pickle"
+    when: "not debian_python"
 
 - module-name: "eel"
   data-files:
