Standalone: Added support for "pyqtgraph" data files

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1728,3 +1728,9 @@
         "main": "un-callable"
       # Using tags, to still make it possible to compile in case of main module.
       when: "not main_module"
+
+- module-name: "pyqtgraph"
+  data-files:
+    dirs:
+      - "colors"
+      - "icons"
