--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,6 +98,7 @@
         "bytecodes",
         "CBOOL",
         "ccache",
+        "CFLOAT",
         "clangcl",
         "clcache",
         "CLONG",
