Fix, workaround for scipy 1.8.x code miscompiled by MSVC
* Happens only with MSVC, which apparently cannot handle the generated
  code correctly, this makes it easier for it to be correct.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1209,6 +1209,9 @@
     - description: "remove sphinx reference"
       replacements_plain:
         "if 'sphinx' in sys.modules:": "if False:"
+    - description: "workaround for MSVC bug with scipy 1.8.x "
+      replacements_plain:
+        "return l2.startswith('-'*len(l1)) or l2.startswith('='*len(l1))": "r = l2.startswith('-'*len(l1)) or l2.startswith('='*len(l1)); return r"
 
 - module-name: "lxml"
   implicit-imports:
