--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,6 @@ pyyaml; python_version == '2.7' or python_version >= '3.6'
 
 Jinja2 >= 2.10.2
 
-ruamel.yaml >= 0.17.21
+ruamel.yaml == 0.17.21
 
 pywin32; sys.platform == "win32" and python_version >= '3.6'
