--- a/nuitka/plugins/standard/stdlib2.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/stdlib2.nuitka-package.config.yml
@@ -29,3 +29,39 @@
   implicit-imports:
     - depends:
         - "_bootlocale"
+
+- module-name: "xmllib"
+  anti-bloat:
+    - description: "remove module ability to run as a binary"
+      change_function:
+        "test": "'(lambda: None)'"
+
+- module-name: "audiodev"
+  anti-bloat:
+    - description: "remove module ability to run as a binary"
+      change_function:
+        "test": "'(lambda: None)'"
+
+- module-name: "rexec"
+  anti-bloat:
+    - description: "remove module ability to run as a binary"
+      change_function:
+        "test": "'(lambda: None)'"
+
+- module-name: "fpformat"
+  anti-bloat:
+    - description: "remove module ability to run as a binary"
+      change_function:
+        "test": "'(lambda: None)'"
+
+- module-name: "Bastion"
+  anti-bloat:
+    - change_function:
+        "_test": "'(lambda: None)'"
+      description: "remove module ability to run as a binary"
+
+- module-name: "xml.sax.xmlreader"
+  anti-bloat:
+    - description: "remove module ability to run as a binary"
+      change_function:
+        "_test": "'(lambda: None)'"
