--- a/nuitka/plugins/standard/stdlib3.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/stdlib3.nuitka-package.config.yml
@@ -83,6 +83,11 @@
       change_function:
         "_main": "'(lambda: None)'"
 
+- module-name: "formatter"
+  anti-bloat:
+    - description: "remove module ability to run as a binary"
+      change_function:
+        "test": "'(lambda: None)'"
 - module-name: "ftplib"
   anti-bloat:
     - description: "remove module ability to run as a binary"
@@ -284,11 +289,11 @@
       change_function:
         "test": "'(lambda: None)'"
 
-
 - module-name: "wsgiref.simple_server"
   implicit-imports:
     - depends:
         - "http.server"
+
 - module-name: "zipfile"
   anti-bloat:
     - description: "remove module ability to run as a binary"
