Standalone: Major cleanup of dependency detection
* Instead of having entry points and used DLLs separate, unify them into one.

* Copy dependencies only at the end.

* Moved dependency detection platform specific codes to separate modules.

* Generate exe dependencies through new plugin interface rather than manually.

* Enhanced reporting output for included DLLs.

* Decide DLL conflicts immediately when it becomes known.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -161,6 +161,7 @@
         "Kivy",
         "kwargs",
         "kwds",
+        "ldconfig",
         "libc",
         "libpython",
         "lldb",
